--- a/防失联地址.md
+++ b/防失联地址.md
@@ -1,6 +1,8 @@
-[×îĞÂ¿ÉÓÃÓòÃû](https://yinyun.site)
-[×îĞÂ¿ÉÓÃÓòÃû](https://sanyun.xyz)
-[×îĞÂ¿ÉÓÃÓòÃû](https://etcle.cc)
-[×îĞÂ¿ÉÓÃÓòÃû](https://mitov.cc)
-[×îĞÂ¿ÉÓÃÓòÃû](https://hlyun.cc)
-Èç¹û·ÃÎÊ²»ÁËÇë³¢ÊÔ»»¸öä¯ÀÀÆ÷»òÉè±¸£¬Á÷Á¿wifi¶¼ÊÔÊÔ
+æœ€æ–°å¯ç”¨åŸŸå:[yinyun.site](https://yinyun.site)<br>
+æœ€æ–°å¯ç”¨åŸŸå:[sanyun.xyz](https://sanyun.xyz)<br>
+æœ€æ–°å¯ç”¨åŸŸå:[etcle.cc](https://etcle.cc)<br>
+æœ€æ–°å¯ç”¨åŸŸå:[mitov.cc](https://mitov.cc)<br>
+æœ€æ–°å¯ç”¨åŸŸå:[hlyun.cc](https://hlyun.cc)<br>
+å·²è¢«å±è”½åŸŸå:[yinyun.me](https://yinyun.me)<br>
+å·²è¢«å±è”½åŸŸå:[yinyun.xyz](https://yinyun.xyz)<br>
+å¦‚æœè®¿é—®ä¸äº†è¯·å°è¯•æ¢ä¸ªæµè§ˆå™¨æˆ–è®¾å¤‡ï¼Œæµé‡wifiéƒ½è¯•è¯•
